--- a/config/database.yml
+++ b/config/database.yml
@@ -14,19 +14,19 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password: root123
-  socket: /var/run/mysqld/mysqld.sock
+  password:
+  #socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
-  database: libotp_development
+  database: otp_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: libotp_test
+  database: otp_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: libotp_production
+  database: otp_production
   username: libotp
   password: <%= ENV['LIBOTP_DATABASE_PASSWORD'] %>
